package com.directi.training.dip.exercise;

import java.io.IOException;

public class EncodingModuleClient
{
    public static void main(String[] args) throws IOException
    {
        EncodingModule encodingModule = new EncodingModule();
        encodingModule.encodeWithFiles();
        MyDatabase db=new MyDatabase();
        encodingModule.encodeBasedOnNetworkAndDatabase(db);
    }
}
