package com.directi.training.dip.exercise;

public interface Idatabase {
    public int write(String inputString);
}
